# skills

./: .gitignore  README.md  pyproject.toml
skills/dev-architecture-principles/: SKILL.md
skills/dev-architecture-principles/references/: api-observability.md  cloud-native.md  saas-compliance.md  scalability-resilience.md  security.md
skills/dev-design-patterns/: SKILL.md
skills/dev-design-patterns/references/: architecture-patterns.md  design-patterns.md  design-principles.md  testing-resilience.md
skills/dev-python/: SKILL.md
skills/dev-python/references/: modern-python.md  project-setup.md  pythonic-patterns.md
skills/rest-api-design/: SKILL.md  conventions.md  patterns.md  spec-template.md
src/skills_sync/: __init__.py  __main__.py  agents.py  cli.py  comparator.py  scanner.py  sync.py
tests/: conftest.py  test_scanner.py
