[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-sync"
version = "0.1.0"
description = "CLI para sincronizar skills de agentes de IA com o repositório central"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
skills-sync = "skills_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_sync"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
